corrected progress check 1 feedback

--- a/Coding_Portfolio_Progress_Check_1/digital-expertise-assignments/data-linkage/pandas_data_linkage.ipynb
+++ b/Coding_Portfolio_Progress_Check_1/digital-expertise-assignments/data-linkage/pandas_data_linkage.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 130,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 131,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 132,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 133,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 134,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 135,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 136,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 137,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 138,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 139,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 140,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 141,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 142,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 143,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 145,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -835,27 +835,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "be75019ed1533d01f9edfd48b7465181",
-     "grade": true,
-     "grade_id": "cell-e65882382c579a81",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -866,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 146,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -881,6 +860,13 @@
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1000,7 +986,7 @@
        "4  2022-11-21           D82           T62  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,6 +998,8 @@
     "# raise NotImplementedError()\n",
     "\n",
     "merged_df = pd.merge(patient_df, visits_df, on=\"PatientID\", how=\"inner\")\n",
+    "\n",
+    "print(len(merged_df.columns))\n",
     "\n",
     "merged_df.head()\n"
    ]
@@ -1028,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 147,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1175,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 148,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1229,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 149,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1293,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 151,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1352,7 +1340,7 @@
     "        # YOUR CODE HERE\n",
     "        # raise NotImplementedError()\n",
     "        linked_record = row1.to_dict()\n",
-    "        linked_record.update(data_row)\n",
+    "        linked_record.update({k: v for k, v in data_row.items() if k not in ['FirstName', 'LastName']})\n",
     "        linked_record['Similarity'] = highest_similarity\n",
     "        linked_records.append(linked_record)\n",
     "        \n",
@@ -1361,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 152,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1404,8 +1392,6 @@
        "      <th>Company</th>\n",
        "      <th>Position</th>\n",
        "      <th>StartDate</th>\n",
-       "      <th>FirstName</th>\n",
-       "      <th>LastName</th>\n",
        "      <th>CurrentJobTitle</th>\n",
        "      <th>ConnectionsCount</th>\n",
        "      <th>ProfileCreationDate</th>\n",
@@ -1420,8 +1406,6 @@
        "      <td>Brown-Miles</td>\n",
        "      <td>Product manager</td>\n",
        "      <td>2021-03-31</td>\n",
-       "      <td>Megan</td>\n",
-       "      <td>Mccoy</td>\n",
        "      <td>Fisheries officer</td>\n",
        "      <td>278</td>\n",
        "      <td>2022-01-25</td>\n",
@@ -1434,8 +1418,6 @@
        "      <td>Rose-Freeman</td>\n",
        "      <td>Plant breeder/geneticist</td>\n",
        "      <td>2022-01-01</td>\n",
-       "      <td>Katherine</td>\n",
-       "      <td>Bruce</td>\n",
        "      <td>Development worker, community</td>\n",
        "      <td>82</td>\n",
        "      <td>2019-01-18</td>\n",
@@ -1448,8 +1430,6 @@
        "      <td>Munoz, Smith and Williams</td>\n",
        "      <td>Pensions consultant</td>\n",
        "      <td>2020-05-21</td>\n",
-       "      <td>Rob</td>\n",
-       "      <td>Sanchez</td>\n",
        "      <td>Broadcast journalist</td>\n",
        "      <td>182</td>\n",
        "      <td>2020-10-03</td>\n",
@@ -1462,8 +1442,6 @@
        "      <td>Collins-Owens</td>\n",
        "      <td>Air traffic controller</td>\n",
        "      <td>2020-10-15</td>\n",
-       "      <td>J.</td>\n",
-       "      <td>Dennis</td>\n",
        "      <td>Patent examiner</td>\n",
        "      <td>409</td>\n",
        "      <td>2019-06-27</td>\n",
@@ -1476,8 +1454,6 @@
        "      <td>Lopez-Key</td>\n",
        "      <td>Research scientist (maths)</td>\n",
        "      <td>2023-05-22</td>\n",
-       "      <td>William</td>\n",
-       "      <td>Wilson</td>\n",
        "      <td>Horticultural consultant</td>\n",
        "      <td>130</td>\n",
        "      <td>2020-05-09</td>\n",
@@ -1495,29 +1471,22 @@
        "3          Jonathan           Dennis              Collins-Owens   \n",
        "4           William           Wilson                  Lopez-Key   \n",
        "\n",
-       "                     Position   StartDate  FirstName LastName  \\\n",
-       "0             Product manager  2021-03-31      Megan    Mccoy   \n",
-       "1    Plant breeder/geneticist  2022-01-01  Katherine    Bruce   \n",
-       "2         Pensions consultant  2020-05-21        Rob  Sanchez   \n",
-       "3      Air traffic controller  2020-10-15         J.   Dennis   \n",
-       "4  Research scientist (maths)  2023-05-22    William   Wilson   \n",
+       "                     Position   StartDate                CurrentJobTitle  \\\n",
+       "0             Product manager  2021-03-31              Fisheries officer   \n",
+       "1    Plant breeder/geneticist  2022-01-01  Development worker, community   \n",
+       "2         Pensions consultant  2020-05-21           Broadcast journalist   \n",
+       "3      Air traffic controller  2020-10-15                Patent examiner   \n",
+       "4  Research scientist (maths)  2023-05-22       Horticultural consultant   \n",
        "\n",
-       "                 CurrentJobTitle  ConnectionsCount ProfileCreationDate  \\\n",
-       "0              Fisheries officer               278          2022-01-25   \n",
-       "1  Development worker, community                82          2019-01-18   \n",
-       "2           Broadcast journalist               182          2020-10-03   \n",
-       "3                Patent examiner               409          2019-06-27   \n",
-       "4       Horticultural consultant               130          2020-05-09   \n",
-       "\n",
-       "   Similarity  \n",
-       "0    1.000000  \n",
-       "1    1.000000  \n",
-       "2    0.941667  \n",
-       "3    0.718750  \n",
-       "4    1.000000  "
+       "   ConnectionsCount ProfileCreationDate  Similarity  \n",
+       "0               278          2022-01-25    1.000000  \n",
+       "1                82          2019-01-18    1.000000  \n",
+       "2               182          2020-10-03    0.941667  \n",
+       "3               409          2019-06-27    0.718750  \n",
+       "4               130          2020-05-09    1.000000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1547,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 154,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1604,7 +1573,36 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "# raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "\n",
+    "# Instead of using loops we can use merge function to find matches\n",
+    "\n",
+    "def evaluate_matches(employment_df, network_df):\n",
+    "    # Ground truth matches based on indices and use intersection not loops to find matches\n",
+    "    ground_truth = set(employment_df.index.intersection(network_df.index))\n",
+    "\n",
+    "    # Merge DataFrames to find matches\n",
+    "    merged = pd.merge(employment_df.reset_index(), network_df.reset_index(), \n",
+    "                      left_on=['index', 'EmployeeFirstName', 'EmployeeLastName'], \n",
+    "                      right_on=['index', 'FirstName', 'LastName'])\n",
+    "\n",
+    "    # Matches made by the linkage algorithm (but after merge)\n",
+    "    predicted_matches = set(merged['index'])\n",
+    "\n",
+    "    # True Positives: Ground truth matches that are in the predicted matches\n",
+    "    TP = len(ground_truth.intersection(predicted_matches))\n",
+    "\n",
+    "    # False Positives: Predicted matches that are not in the ground truth\n",
+    "    FP = len(predicted_matches.difference(ground_truth))\n",
+    "\n",
+    "    # False Negatives: Ground truth matches that are not in the predicted matches\n",
+    "    FN = len(ground_truth.difference(predicted_matches))\n",
+    "\n",
+    "    # Calculate Precision and Recall\n",
+    "    precision = TP / (TP + FP) if TP + FP > 0 else 0\n",
+    "    recall = TP / (TP + FN) if TP + FN > 0 else 0\n",
+    "\n",
+    "    return precision, recall\n"
    ]
   },
   {
@@ -1669,7 +1667,13 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "YOUR ANSWER HERE\n",
+    "\n",
+    "To merge these two datasets, we should:\n",
+    "1. Convert the annual income to a monthly income to match the scale, by divide the annual one by 12.\n",
+    "2. Map the word descriptions of education levels to the corresponding numerical ones.\n",
+    "3. Maybe add a 2 years error margin to the first dataset also.\n",
+    "4. After ajusting datas, maching these fields. For ages we have to treat it specially since it is a range."
    ]
   }
  ],
@@ -1689,7 +1693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
